# Tensyl

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  asv.conf.json  index.html  mkdocs.yml  objects.inv  pyproject.toml  search.html  sitemap.xml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml
api/cells-and-sections/: index.html
api/core/: index.html
api/geometry-and-fields/: index.html
api/homogenizers/: index.html
api/io/: index.html
api/materials/: index.html
background/motivation/: index.html
background/terminology/: index.html
benchmarks/: __init__.py  benchmarks.py
docs/: constitutive_kernel.md  development.md  external_workflows.md  geometry_wall_fields.md  index.md  level1_homogenization.md  markdown_authoring.md  references.md  tangent_plane_homogenization.md  tensyl-design-review.md  white_paper.md
docs/.obsidian/: workspace.json
docs/api/: cells-and-sections.md  core.md  geometry-and-fields.md  homogenizers.md  io.md  materials.md
docs/background/: history.md  motivation.md  terminology.md
docs/examples/: ellipsoid-stiffness-map.md  laminate-skin.md  non-constant-stiffness-field.md  orthogrid-panel.md  sampled-stiffness-atlas.md  si-mirror-placeholders.md  skin-only.md  sp8007-data-prep.md  stiffened-barrel.md  stiffened-cone.md  stiffened-dome.md  stiffness-field-maps.md  us-customary-orthogrid.md  us-customary-skin.md
docs/examples/scripts/: ellipsoid_stiffness_map.py  stiffness_field_maps.py
docs/getting-started/: first-abd-stiffness.md  first-homogenized-cell.md  first-wall-law.md  installation.md
docs/javascripts/: mathjax.js
docs/references/: A Treatise on Equivalent-Plate Stiffnesses.md  NASA SP-8007.md
docs/theory/: conventions.md  equivalent-stiffness.md  equivalent-wall.md  tangent-plane-homogenization.md  validity.md
docs/user-guide/: beam-sections-and-cells.md  external-workflows.md  geometry-and-fields.md  homogenization.md  materials-and-laminates.md  result-interpretation.md  solver-handoff.md  sp8007-data-handoff.md  sp8007-data-prep.md  stiffened-surfaces.md  units-and-consistency.md
docs/validation/: barrels.md  flat-panels.md  gallery.md  index.md  limitations.md  literature-cell-checks.md  local-abd.md  phases-3-5.md  sp8007-reconciliation.md
examples/orthogrid-panel/: index.html
examples/sampled-stiffness-atlas/: index.html
examples/skin-only/: index.html
examples/stiffness-field-maps/: index.html
getting-started/first-abd-stiffness/: index.html
getting-started/first-homogenized-cell/: index.html
getting-started/installation/: index.html
references/: index.html
scripts/: generate_section_diagrams.py
search/: search_index.json
src/tensyl/: __init__.py  _version.py  cells.py  constitutive.py  conventions.py  homogenizers.py  laminates.py  materials.py  rotations.py  sections.py  typing.py
tests/: __init__.py  _helpers.py  test_constitutive.py  test_conventions.py  test_fields.py  test_geometry.py  test_homogenizers.py  test_import.py  test_import_boundaries.py  test_io.py  test_laminates.py  test_phase3_cells.py  test_rotations.py  test_section_diagrams.py  test_thin_wall_sections.py  test_validation_calculix_parser.py  test_validation_comparison.py  test_validation_decks.py  test_validation_lab.py  test_validation_local_abd.py  test_validation_nemeth.py  test_validation_scripts.py  test_validation_solver_extraction.py  test_validation_solvers.py  test_validation_sp8007.py
tests/data/: nemeth_phase3_cases.json
tests/docs_examples/: test_public_examples.py
theory/conventions/: index.html
theory/equivalent-stiffness/: index.html
theory/tangent-plane-homogenization/: index.html
theory/validity/: index.html
user-guide/beam-sections-and-cells/: index.html
user-guide/external-workflows/: index.html
user-guide/geometry-and-fields/: index.html
user-guide/homogenization/: index.html
user-guide/materials-and-laminates/: index.html
user-guide/solver-handoff/: index.html
user-guide/sp8007-data-handoff/: index.html
user-guide/units-and-consistency/: index.html
validation/: README.md  index.html  solver-environment.yml
validation/scripts/: build_gallery_summary.py  build_skin_only_abd6_comparison.py  build_sp8007_reconciliation.py  check_solvers.py  compare_case.py  run_case.py  run_local_abd_solver.py  run_matrix.py  setup_solvers.py
validation/sp8007-reconciliation/: index.html
(+95 files in other folders)
