[project]
name = "tensyl"
version = "0.1.0"
description = "Equivalent-wall homogenization tools for stiffened thin-wall structures."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "pydantic>=2.12",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "asv>=0.6.6",
    "hypothesis>=6.0",
    "mkdocs>=1.6",
    "mkdocstrings[python]>=0.25",
    "pymdown-extensions>=10.0",
    "pytest>=8.0",
    "ruff>=0.12",
    "ty>=0.0.1a19",
]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
]

[tool.ty.environment]
python-version = "3.12"
root = ["./src", "."]

[tool.ty.src]
include = ["src", "tests"]
