[project]
name = "tensyl"
version = "0.1.0"
description = "Equivalent-stiffness homogenization for stiffened plates and shells."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Sergey Rogachev", email = "srsergey@gmail.com" },
]
keywords = [
    "homogenization",
    "stiffened shells",
    "stiffened plates",
    "ABD stiffness",
    "scientific computing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=2.0",
    "pydantic>=2.12",
    "pyyaml>=6.0.3",
]

[project.urls]
Homepage = "https://github.com/srogachev95/Tensyl"
Documentation = "https://srogachev95.github.io/Tensyl/"
Repository = "https://github.com/srogachev95/Tensyl"
Issues = "https://github.com/srogachev95/Tensyl/issues"
Changelog = "https://github.com/srogachev95/Tensyl/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling>=1.30.1"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tensyl"]

[tool.hatch.build.targets.sdist]
include = [
    "/.python-version",
    "/asv.conf.json",
    "/benchmarks",
    "/CHANGELOG.md",
    "/CONTRIBUTING.md",
    "/docs",
    "/LICENSE",
    "/mkdocs.yml",
    "/pyproject.toml",
    "/README.md",
    "/scripts",
    "/src",
    "/tests",
    "/uv.lock",
    "/validation",
]
exclude = [
    "/AGENTS.md",
    "/build",
    "/dist",
    "/docs/internal",
    "/docs/llm_wiki",
    "/site",
    "/validation/artifacts/scratch",
    "**/.DS_Store",
    "**/__pycache__",
    "**/*.py[cod]",
]

[dependency-groups]
dev = [
    "asv>=0.6.6",
    "hypothesis>=6.0",
    "matplotlib>=3.11.0",
    "mkdocs>=1.6",
    "mkdocstrings[python]>=1.0.4",
    "pymdown-extensions>=10.0",
    "pytest>=8.0",
    "ruff>=0.12",
    "ty>=0.0.1a19",
]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
]

[tool.ty.environment]
python-version = "3.12"
root = ["./src", "./validation/lib", "."]

[tool.ty.src]
include = ["src", "tests", "validation/lib"]
